--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     },
     "dependencies": {
         "bootstrap": "^5.1.1",
-        "bootstrap-vue": "^2.21.2",
         "core-js": "^3.18.0",
         "jquery": "^3.6.0",
         "popper.js": "^1.16.1",
-        "vue": "^3.2.18"
+        "vue": "^3.2.18",
+        "vue-router": "^4.0.11"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^4.5.13",
